[package]
name = "ckpttn-rs"
version = "0.1.1"
edition = "2021"
description = "Circuit Partitioning in Rust"
repository = "https://github.com/luk036/ckpttn-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.109"
svgbobdoc = { version = "0.3", features = ["enable"] }

[dependencies.petgraph]
version = "0.8.2"
features = ["serde-1"]
