[package]
name = "ckpttn-rs"
version = "0.1.3"
edition = "2021"
description = "Circuit Partitioning in Rust"
repository = "https://github.com/luk036/ckpttn-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "src/doc-header.html"]

[dependencies]

[dependencies.petgraph]
version = "0.8.3"
features = ["serde-1"]
